src/test/deca/context/invalid/our_tests/jb-wrong-type.deca
// Description:
//    Wrong type to declare a variable
//
// Resultats:
//    Should throw Contextual error (rule 0.2)
//
// Historique:
//    cree le 22/01/2017

{
    WrongType a;
}
